--- a/frontend/src/App/App.css
+++ b/frontend/src/App/App.css
@@ -1,17 +1,15 @@
 body {
-	/* font-size: 15px;
-	font-weight: 500; */
 	font-family: 'poppins', sans-serif;
-	/* background: linear-gradient(to top left, #7e9bb2, #1f3a5f) no-repeat; */
 	min-height: 100vh;
-	
+	background: linear-gradient(to bottom, var(--brand-start), var(--brand-end));
 }
 
 :root {
-	--brand: #132742; /* Dark Blue */
-	--primary: #E9E7FD; /* Light Blue */
-	--accent: #A31621; /* Red */
-	--dark: #09080D; /* Dark Gray */
-	--muted: #45424D; /* Gray */
-  }
+	--brand-start: #132742; /* Darker Blue */
+	--brand-end: #1f3a5f; /* Lighter Blue */
+	--primary: #E9E7FD;
+	--accent: #A31621;
+	--dark: #09080D;
+	--muted: #45424D;
+}
 
